@@ -172,8 +172,6 @@ def noargs_command(fn):
 
 class CrateCmd(object):
 
-    EXCLUDE_ROWCOUNT = ['create', 'alter', 'drop', 'refresh', 'set', 'reset']
-
     def __init__(self,
                  output_writer=None,
                  connection=None,
@@ -374,10 +372,7 @@ class CrateCmd(object):
             self.pprint(cur.fetchall(), [c[0] for c in cur.description])
             tmpl = '{command} {rowcount} row{s} in set{duration}'
         else:
-            tmpl = '{command} OK'
-            if command.lower() not in self.EXCLUDE_ROWCOUNT:
-                tmpl += ', {rowcount} row{s} affected'
-            tmpl += '{duration}'
+            tmpl = '{command} OK, {rowcount} row{s} affected {duration}'
         self.logger.info(tmpl.format(**print_vars))
         return True
 
