@@ -12,16 +12,13 @@ Check the correct response status lines.
     +------------------------+-----------+---------+-----------+---------+
     CONNECT OKCLUSTER CHECK OK
 
-**Make sure the response status line of DDL and a few other statements
-that do not affect rows do not print ``affected rows``:**
-
-``CREATE`` **does not** affect rows::
+``CREATE``::
 
     cr> create table test_table (
     ...   name string,
     ...   value float
     ... ) with (number_of_replicas='0');
-    CREATE OK (... sec)
+    CREATE OK, 1 row affected (... sec)
 
 ``INSERT`` **does** affect rows, check for singular/plural::
 
@@ -32,10 +29,10 @@ that do not affect rows do not print ``affected rows``:**
     ... ('bar', 0.2), ('foobar', 0.3);
     INSERT OK, 2 rows affected (... sec)
 
-``REFRESH`` **does not** affect rows::
+``REFRESH``::
 
     cr> refresh table test_table;
-    REFRESH OK (... sec)
+    REFRESH OK, ... affected (... sec)
 
 ``UPDATE`` **does** affect rows, check for singular/plural::
 
@@ -50,7 +47,7 @@ that do not affect rows do not print ``affected rows``:**
 .. hide::
 
     cr> refresh table test_table;
-    REFRESH OK (... sec)
+    REFRESH OK, ... affected (... sec)
 
 ``SELECT`` has a different status message format::
 
@@ -64,23 +61,23 @@ that do not affect rows do not print ``affected rows``:**
     +------+-------+
     SELECT 3 rows in set (... sec)
 
-``ALTER TABLE`` **does not** affect any rows::
+``ALTER TABLE``::
 
     cr> alter table test_table set (refresh_interval=0);
-    ALTER OK (... sec)
+    ALTER OK, ... affected (... sec)
 
-``SET`` and ``RESET`` **do not** affect rows::
+``SET`` and ``RESET``::
 
     cr> set global transient stats.enabled = true;
-    SET OK (... sec)
+    SET OK, 1 row affected (... sec)
 
     cr> reset global stats.enabled;
-    RESET OK (... sec)
+    RESET OK, 1 row affected (... sec)
 
-``DROP`` **does not** affect rows::
+``DROP``::
 
     cr> drop table test_table;
-    DROP OK (... sec)
+    DROP OK, 1 row affected (... sec)
 
 Status messages show the first word only::
 
